cmake_minimum_required(VERSION 3.21)
project(Programming_ASSV__3_0)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Programming_ASSV__3_0
        .idea/.gitignore
        .idea/modules.xml
        .idea/Programming-ASSV--3.0.iml
        .idea/vcs.xml
        .idea/workspace.xml
        .vscode/launch.json
        .vscode/settings.json
        .vscode/tasks.json
        bmplib.cpp
        bmplib.h
        crowd.bmp
        CS112-Winter2021-2022-Assignment3-V5.0.pdf
        demo2.cpp
        fruit.bmp
        House.bmp
        mario.bmp
        orange
        orange.cpp
        orange.h
        parots.bmp
        photographer.bmp)
